# MacOS-CFD

./: .gitignore  AGENTS.md  CMakeLists.txt  GUI_IMPROVEMENTS.md  README.md  build.sh  run.sh
shaders/: quad.vert  scalar.frag
src/: colormaps.cpp  colormaps.hpp  main.cpp  profiler.cpp  profiler.hpp  shapes.cpp  shapes.hpp  ui.cpp  ui.hpp  viz.cpp  viz.hpp
src/gui/: gui.cpp  gui.hpp
src/solver/: advection.cpp  advection.hpp  bc.cpp  bc.hpp  diffusion.cpp  diffusion.hpp  field.hpp  grid.cpp  grid.hpp  metrics.cpp  metrics.hpp  pressure.cpp  pressure.hpp  project.cpp  project.hpp  state.cpp  state.hpp  stepper.cpp  time_integrator.cpp  time_integrator.hpp
